Update requirements to remove version constraints
Removed specific version constraints for several packages.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-streamlit==1.39.0
-pandas==2.2.3
+streamlit
+pandas
 numpy<2.0.0
-altair==5.4.1
-openpyxl==3.1.5
-XlsxWriter==3.2.0
-google-cloud-bigquery==3.27.0
-google-cloud-storage==2.18.2
-google-api-core==2.23.0
-google-auth==2.36.0
-pyarrow==17.0.0
-Pillow==10.4.0
-requests==2.32.3
+altair
+openpyxl
+xlsxwriter
+google-cloud-bigquery
+google-cloud-storage
+google-api-core
+google-auth
+pyarrow
+Pillow
+requests
